# minute

./: .cruft.json  .dockerignore  .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CODEOWNERS  LOCAL_SETUP.md  Makefile  README.md  conftest.py  docker-compose.yaml  elasticmq.conf  localstack-setup.sh  pyproject.toml  run-worker-local.sh  setup-ollama.sh  test-apim.py
.github/: .github.env  pull_request_template.md
.github/workflows/: backend-tests.yml  build-fe.yml  build-one.yml  build.yml  checks.yml  cruft-update.yml  dependabot-automerge.yml  evals-tests.yml  frontend-tests.yml  pre-commit.yml  release.yml  tests.yml  type-check.yml
alembic/: README.md  env.py
alembic/versions/: 00a203bcfeaa_.py  0225e42255a1_add_chat_table.py  2754babc9066_.py  5008f0ccc24e_add_recording_table.py  6757f82ea8b2_add_uploaded_documents_column.py  9d080ca9fe6c_add_template_question_table.py  9d30f5b926d4_add_agenda_to_minute.py  afa8a57e3832_.py  bea950bbbeda_add_minute_hallucination_and_minute_.py  c4f9d2a1b8e3_dedupe_users_by_email_case.py  d3dc5dd94d97_add_user_template.py  e2c1973fb968_.py  e577c83813f8_add_title_to_transcription.py  ef2b536ce815_.py  f5556a9ec1ae_add_transcription_job_state_table.py  fb31a5107160_migrate_legacy_minutes.py  fe0e69c8d4db_add_description_to_user_template.py
backend/: .env.example  Dockerfile  cleanup_job.py  entrypoint.sh  main.py
backend/services/: exceptions.py  minute_handler_service.py  queue_service.py  template_manager.py  transcription_handler_service.py
backend/templates/: types.py
backend/utils/: delete_unwanted_records.py  get_file_s3_key.py  signal_handler.py  text_processing.py
common/: auth.py  constants.py  format_transcript.py  generate_example_env.py  generate_meeting_title.py  logger.py  prompts.py  settings.py  types.py
common/audio/: ffmpeg.py  generate_speaker_predictions.py  speakers.py
common/database/: postgres_database.py  postgres_models.py
common/llm/: client.py
common/services/: exceptions.py  minute_handler_service.py  posthog_client.py  template_manager.py  transcription_handler_service.py
common/templates/: add_citations.py  citations.py  template_utils.py  types.py  user_template.py
documentation/: data-contracts.md  env-impact.md  kms_implementation.md
documentation/adr/: 011-adr-evaluation-implementation-scheduling.md  011-evaluation-frequency.md  012-evaluation-storage.md  014-evaluation-runners.md  018-transcription-evaluation-metrics.md  019-cpu-runtime-architecture.md  ffmpeg-processing.md
evals/: .gitignore  README.md  pyproject.toml
evals/audio_generation/configs/: config.yaml  two-teens.json
evals/audio_generation/src/: audio_with_background.py  eleven_text_to_speech.py  main.py  settings.py
evals/audio_generation/src/audio_transformation/: audio_background.py
evals/audio_generation/src/tts_adapters/: base.py  eleven_labs.py
evals/audio_generation/src/utils/: audio_duration.py  dialogue.py  parsing_utils.py  select_voice.py  write_dialogue.py
evals/characteristics/configs/: default_config.yaml
evals/characteristics/prompts/: characteristic_extraction.jinja2
evals/characteristics/src/: chunker.py  config_loader.py  main.py  pipeline.py  sanitizer.py  schema.py  transcript_loader.py  types.py
evals/dataset_generation/transcription_generation/: main.py  visualize_transcript.py
evals/dataset_generation/transcription_generation/configs/: multispeaker.yaml  smoketest.yaml
evals/dataset_generation/transcription_generation/prompts/: actor_generator.j2  actor_system.j2  ending_notice.j2  facilitator.j2  facilitator_reminder.j2  time_remaining.j2
evals/dataset_generation/transcription_generation/src/: actor.py  actor_generator.py  config.py  constants.py  facilitator.py  generate_themes.py  generate_transcript.py  history_manager.py  models.py  participant.py  transcript_generator.py
evals/summarisation/configs/: default.yaml  smoke-test.yaml  test.yaml
evals/summarisation/prompts/: judge.j2  summarize.j2
evals/summarisation/src/: adapter_factory.py  config.py  dspy_wrapper.py  evaluate.py  jsonl.py  langchain_adapter.py  metric.py  prompts.py  runner.py  schemas.py  signatures.py
evals/summarisation/src/ailg_evals/: cli.py  config.py  jsonl.py  metric.py  runner.py  schemas.py  signatures.py
evals/transcription/: .env.example  .gitignore  README.md  pyproject.toml  transcription_eval.py
evals/transcription/configs/: default.yaml  larger_cloud_test.yaml  smoketest.yaml
evals/transcription/src/: config_validation.py  constants.py  evaluate.py  models.py
evals/transcription/src/adapters/: __init__.py  azure.py  base.py  registry.py  whisper.py  whisply.py
evals/transcription/src/core/: ami_dataset.py  config.py  dataset.py  formatting.py  formatting_helpers.py  metrics.py  results.py  runner.py  segments.py
evals/transcription/src/core/ami/: __init__.py  audio.py  cache.py  constants.py  loader.py  metadata.py  selection.py
evals/transcription/src/core/metrics/: __init__.py  aggregation.py  diarization.py  jaccard.py  speaker_count.py  transcription.py  transforms.py
evals/transcription/src/utils/: sample_selection.py
evals/transcription/transcription-generation/src/: generate_transcript.py
frontend/: .eslintrc.json  .gitignore  .prettierignore  Dockerfile  Dockerfile.dev  README.md  instrumentation-client.ts  middleware.ts  next.config.js  openapi-ts.config.ts  package-lock.json  package.json  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vitest.config.ts
scripts/: run-tests.sh
terraform/: data.tf  diagram_script.py  ecs.tf  iam.tf  load_balancer.tf  provider.tf  rds.tf  s3.tf  secrets.tf  sqs.tf  variables.tf
tests/: marks.py  test_convert_american_to_british_spelling.py  test_llm_client.py  test_migration_dedupe_users_by_email_case.py  test_queues_e2e.py  test_templates.py  test_text_processing.py  test_transcription_manager.py  test_utils.py  utils.py
worker/: Dockerfile  entrypoint.sh  healthcheck.py  main.py  minute_handler_service.py  ray_recieve_service.py  transcription_handler_service.py  worker_service.py
(+230 files in other folders)
