[project]
name = "minute"
authors = [
    { name = "i.AI", email = "i-dot-ai-enquiries@cabinetoffice.gov.uk"}
]
license = "MIT"
readme = "README.md"
version = "2.0.0"
requires-python = ">=3.12,<3.13"
dynamic = [ "dependencies" ]

[tool.cruft]
skip = [
    # general_paths
    ".env.*",
    "data",
]

[tool.pytest.ini_options]
minversion = "8.3"
testpaths = [
    "tests"
]
addopts = [
    "-ra -q",
    "--cov=backend",               
    "--cov=common",
    "--cov=evals", 
    "--cov=worker",                 
    "--cov-report=term-missing",   
    "--cov-report=html",             
    ]

[tool.coverage.run]
source = ["backend", "common", "evals"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/terraform/*",
    "*/alembic/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/.venv/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
fail_under = 10


[tool.poetry]
packages = [
    {include = "worker"},
    {include = "backend"},
    {include = "common"},
]
requires-poetry = "=2.3.2"

# add common dependencies here
[tool.poetry.dependencies]
cryptography = "^44.0.2"
pydantic-settings = "^2.5.2"
alembic = "^1.13.3"
sqlmodel = "^0.0.27"
tenacity = "^9.1.2"
aioboto3 = "^14.3.0"
breame = "^0.1.2"
mistune = "^3.1.3"
httpx = "^0.28.1"
psycopg2-binary = "^2.9.9"
boto3 = "^1.35.3"
fastapi = ">=0.112.0"
sentry-sdk = {extras = ["fastapi"], version = "^2.18.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.42"}
asyncpg = "^0.30.0"
markdownify = "^1.2.0"
python-multipart = "^0.0.20"
i-dot-ai-utilities = "^0.4.4"
azure-servicebus = "^7.14.2"
mypy-boto3-sqs = "^1.42.3"

[tool.poetry.group.backend.dependencies]
pyjwt = "^2.9.0"
posthog = "^6.6.1"
uvicorn = "^0.31.0"
apscheduler = "^3.11.0"

[tool.poetry.group.worker.dependencies]
google-genai = "^1.10.0"
openai = "^1.42.0"
ffmpeg-python = "^0.2.0"
ray = {extras = ["default"], version = "^2.53.0"}
azure-storage-blob = "^12.26.0"
azure-identity = "^1.23.1"

[tool.poetry.group.local-dev.dependencies]
whisply = "^0.13.1"

[tool.poetry.group.evals.dependencies]
datasets = "^3.0.0"
jiwer = "^3.0.0"
soundfile = "^0.12.0"
librosa = "^0.10.0"

[tool.poetry.group.dev.dependencies]
bumpversion = "^0.6.0"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
pytest-env = "^1.1.1"
pytest-mock = "^3.14.0"
pytest-cov = "^5.0.0"
pytest-dotenv = "^0.5.2"
pytest-asyncio = "^0.23.8"
ruff = "0.8.2"
bandit = "^1.7.9"
detect-secrets = "^1.5.0"
playwright = "^1.45"
pytest-playwright = "^0.5"
ipykernel = "^6.29.5"
beautifulsoup4 = "^4.13.3"
mypy = "^1.19.1"
types-aiofiles = "^25.1.0.20251011"
types-cffi = "^1.17.0.20250915"
types-colorama = "^0.4.15.20250801"
types-decorator = "^5.2.0.20251101"
types-docutils = "^0.22.3.20251115"
types-gevent = "^25.9.0.20251228"
types-greenlet = "^3.3.0.20251206"
types-grpcio = "^1.0.0.20251009"
types-grpcio-status = "^1.0.0.20250506"
types-jsonschema = "^4.26.0.20260109"
types-pexpect = "^4.9.0.20250916"
types-protobuf = "^6.32.1.20251210"
types-psutil = "^7.2.1.20260116"
types-psycopg2 = "^2.9.21.20251012"
types-pyasn1 = "^0.6.0.20250914"
types-pycurl = "^7.45.7.20251101"
types-pygments = "^2.19.0.20251121"
types-pysocks = "^1.7.1.20251001"
types-python-dateutil = "^2.9.0.20251115"
types-pytz = "^2025.2.0.20251108"
types-pyyaml = "^6.0.12.20250915"
types-requests = "^2.32.4.20260107"
types-setuptools = "^80.9.0.20251223"
types-six = "^1.17.0.20251009"
types-tensorflow = "^2.18.0.20260121"
types-tqdm = "^4.67.0.20250809"
types-ujson = "^5.10.0.20250822"
types-aioboto3 = "^15.5.0"
types-botocore = "^1.0.2"
types-boto3 = "^1.42.34"
coverage = "^7.13.2"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = 'py312'
fix = true

[tool.ruff.format]
exclude = ["data/*"]

[tool.ruff.lint]
select = [
    "A", "B", "C", "E", "F", "G", "I", "N", "Q", "S", "T", "W",
    "ARG", "ASYNC", "BLE", "COM", "DJ", "DTZ", "EM", "EXE", "FURB",
    "ICN", "INT", "ISC", "LOG", "NPY", "PD", "PGH", "PIE", "PL",
    "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "SLOT",
    "TCH", "TD", "TID", "UP", "YTT"
]
# TODO: Decide on a structure for evals folder and add ruff support properly
exclude = ["out/*", "viewer/*", "alembic/*", "evals/src/*"]
ignore = ["COM812", "DJ001", "RET505", "RET508", "PLR0913", "S318","ISC001","PLR0912","C901","PLR0912"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "frontend"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "S106", "PLR0913", "PLR0915", "PLR2004", "TD003", "S311"]
"*/tests/*" = ["S101", "S106", "PLR0913", "PLR0915", "PLR2004", "TD003"]
"*/tests_playwright/*" = ["S101", "S106", "PLR0913", "PLR2004", "TD003"]

[tool.mypy]
explicit_package_bases = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
strict_optional = true
check_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = false

# terraform: non production diagram scripts using untyped diagrams 
# TODO: Decide on a structure for evals and viewer folder and add mypy support properly
exclude = ["alembic/*", "tests/*", "terraform/*", "viewer/*"]


[[tool.mypy.overrides]]
module = "soundfile.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "datasets.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "ffmpeg.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dspy", "dspy.*"]
ignore_missing_imports = true

