[project]
name = "ailg-evals"
version = "0.1.0"
description = "LLM evals pipeline (DialogSum)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "datasets>=2.20.0",
  "dspy-ai>=2.0.4",
  "jinja2>=3.1.4",
  "langchain>=0.2.14",
  "langchain-core>=0.2.38",
  "langchain-openai>=0.1.22",
  "orjson>=3.10.7",
  "polars>=1.5.0",
  "pydantic>=2.8.2",
  "pyyaml>=6.0.2",
  "tenacity>=9.0.0",
  "typer>=0.12.5",
]

[project.scripts]
ailg-evals = "ailg_evals.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["evals"]

[tool.uv]

default-groups = ["dev"]

[dependency-groups]
dev = [
  "ruff>=0.6.9",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
