[project]
name = "transcription-evals"
version = "0.1.0"
description = "Evaluation suite for transcription services"
requires-python = ">=3.9"
dependencies = [
    "datasets>=2.0.0,<3.0.0",
    "evaluate>=0.4.0,<0.5.0",
    "jiwer>=3.0.0,<4.0.0",
    "soundfile>=0.12.0,<0.13.0",
    "librosa>=0.10.0,<0.11.0",
    "azure-cognitiveservices-speech>=1.0.0,<2.0.0",
    "openai-whisper==20231117",
    "python-dotenv>=1.0.0,<2.0.0",
    "tqdm>=4.0.0,<5.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
